Fri May 23 23:05:11 2014  fox

     162* src/ctw.c
          Add hyperlink detection/display.

Sat Jan 25 21:20:03 2014  fox

     161* README, makefile, src/fcterm.c, src/scrbar.c:
        Make the background panel less bright to make it clearer.

Tue Aug 27 22:39:16 2013  fox

     160* armv6l: binary supported

Tue Dec 18 23:01:08 2012  fox

     159* ctw.c: Fix cursor positioning for special line drawing (gridlines).

Mon Oct 29 22:58:58 2012  fox

     158* build.h: 4.34

     157* ctw.c: Add support for ESC[? p1;p2;p3 c Linux cursors.

Sun Sep  9 09:22:02 2012  fox

     156* build.h: 4.33

     155* ctw.c: read_modifier_keys: Avoid redoing multiple times.

Sat Aug 25 17:37:00 2012  fox

     154* ctw.c: Add support for ESC[9Xm and ESC[10Xm for eastman ball.

Mon Aug  6 12:17:54 2012  fox

     153* ctw.c: Allow KP_0 to be an INS key innon-keypad mode.

Sun Jul  8 18:23:15 2012  fox

     152* term.c, makefile, fcterm.c, ctw.c: Build on MacOS 10.7

Thu Jun 21 22:07:15 2012  fox

     151* ctw.c: Add UTF-8 0x2500 line drawing chars for elinks.

Thu May  3 21:18:02 2012  fox

     150* term.c: Add _NET_WM_ICON support.

Sat Oct 22 20:40:18 2011  fox

     149* ctw.c, fcterm.c: Add shell status "LED" to the status panel.

Thu Oct 20 22:48:18 2011  fox

     148* ctw.c: Add support for collapse/open graphic.

Wed Oct 19 21:11:00 2011  fox

     147* ctw.c: Fix shifted/line drawing problem.

Tue Oct 18 23:09:44 2011  fox

     146* ctw.c: Better outline grid drawing.

Mon Oct 17 22:37:06 2011  fox

     145* ctw.c: Support 0x01 gridlines drawing for CRiSP.

Wed Oct 12 22:10:57 2011  fox

     144* ctw.c: Fix issue in 142 - we didnt create the log dir for the user.

Sun Oct  2 21:37:24 2011  fox

     143* ctw.c: Add support for 1936/1937 box/unbox drawing.

Mon Sep 26 23:18:40 2011  fox

     142* term.c: Put logs into /tmp/$USER dir.

Tue Sep 13 22:13:12 2011  fox

     141* ctw.c: Allow hilite/select of a single space.

Sat Aug 27 15:24:26 2011  fox
