@@ -1,6 +1,6 @@
 f3df4332 size=66      mtime=1091540434 ./.gdbinit
-00000000 size=4096    mtime=1349941124 ./.git
-8e58364c size=14403   mtime=1377639563 ./Changes
+00000000 size=4096    mtime=1400883025 ./.git
+d5539b09 size=14652   mtime=1400882721 ./Changes
 181fd85a size=25551   mtime=1377640233 ./README
 2821fbbd size=2816    mtime=1267906051 ./README.2010
 992cfa7b size=752     mtime=1221388987 ./README.fcterm
@@ -15,10 +15,10 @@ c3f39024 size=12403   mtime=958296553 ./Xdefaults
 86ae103c size=231     mtime=1312231261 ./fccat
 cc143aa6 size=2480    mtime=887227412 ./fcterm.bitmap
 eee5bd46 size=3949    mtime=1287247446 ./fcterm.xpm
-91111cd1 size=162     mtime=1377639556 ./include/build.h
+03fd21fe size=162     mtime=1400882711 ./include/build.h
 5f5d5892 size=432     mtime=1267915971 ./include/code.h
-9ef32a2e size=19052   mtime=1341869177 ./include/ctw.h
-6189559e size=9684    mtime=1351551439 ./include/ctwP.h
+7e6e0965 size=19224   mtime=1400882913 ./include/ctw.h
+5589e233 size=9718    mtime=1400882841 ./include/ctwP.h
 37b5c319 size=5617    mtime=1341868386 ./include/fcterm.h
 12b04ee8 size=15975   mtime=1341765073 ./include/machine.h
 f48818de size=9710    mtime=1341765027 ./include/machos/apple-osx-10.7-x86.h
@@ -65,15 +65,15 @@ b1197941 size=162     mtime=1267481650 ./samples/graphs
 149abf77 size=57      mtime=1267574279 ./samples/rect
 7f872666 size=388     mtime=1267574353 ./samples/rect.pl
 623fd7c0 size=2066    mtime=1267574421 ./samples/smaps.pl
-2d526a10 size=253959  mtime=1355871666 ./src/ctw.c
-453e9c25 size=65004   mtime=1364806112 ./src/fcterm.c
+183c5fde size=255241  mtime=1400882951 ./src/ctw.c
+e3ecc6dd size=65002   mtime=1385288433 ./src/fcterm.c
 aea56fd6 size=27652   mtime=1220482375 ./src/fmcterm.c
 8414adc6 size=8718    mtime=1344251620 ./src/keyboard.c
 ce4b58e5 size=4386    mtime=1220482375 ./src/motif.c
 58ba9418 size=10464   mtime=1220482375 ./src/pty.c
 bef69b22 size=35872   mtime=1341869848 ./src/ptysrv.c
 e8f99e50 size=2138    mtime=1341765405 ./src/rotate.c
-0d37e119 size=23367   mtime=1227137032 ./src/scrbar.c
+25bfc059 size=23367   mtime=1390684782 ./src/scrbar.c
 9b5dde01 size=336     mtime=1220482376 ./src/t.c
 1f76c86b size=65136   mtime=1341768368 ./src/term.c
 d5534b35 size=1945    mtime=1233095977 ./src/xft.c
