@@ -1,3 +1,11 @@
+Sat May 31 13:37:52 2014  fox
+
+     163* 
+          include/ctw.h
+          include/ctwP.h
+          src/ctw.c
+          Build with stpcpy to workaround gcc/glibc bug.
+
 Fri May 23 23:05:11 2014  fox
 
      162* src/ctw.c
